refactor: update UnifiedPush and switch to PushService[skip ci]
Co-authored-by: kitterion <12870762+kitterion@users.noreply.github.com>
Co-authored-by: xtaodada <xtao@xtao.de>